--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 2rem;
+	text-align: center;
+}
+
 * {
 	font-family: 'Inter', sans-serif;
 }
